// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render editable value if present 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  this value should be rendered
</Text>
`;

exports[`<Text /> should render nothing with missing editable and value 1`] = `null`;

exports[`<Text /> should render nothing with missing field 1`] = `null`;

exports[`<Text /> should render other attributes with other props provided 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  selectable={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  this value should be rendered
</Text>
`;

exports[`<Text /> should render value if editable is undefined 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  this value should be rendered
</Text>
`;
